--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,3 +6,8 @@
     background-size: cover;
     margin: 100px;
 }
+.change{
+    margin-top: 100px;
+    margin-left: 100px;
+    font-size: xx-large;
+}
