--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,14 +39,23 @@
     margin-top: 50px;
     text-decoration: overline;
     padding: 30px;
-    padding-top: 100px;
-    padding-bottom: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .topy{
     background-color: gainsboro;
     margin: 100px;
+    margin-bottom: 100px;
+    padding: 50px;
 }
 .movers{
     display: grid;
-    grid-template-columns: repeat(3);
+    margin: 100px;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    margin-top: 20px;
+}
+.movera{
+    align-items: center;
+    padding: 20px;
 }
