--- a/assets/styles.css
+++ b/assets/styles.css
@@ -45,7 +45,7 @@
 .topy{
     background-color: gainsboro;
     margin: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 0px;
     padding: 50px;
 }
 .movers{
@@ -58,4 +58,14 @@
 .movera{
     align-items: center;
     padding: 20px;
+}
+.footer{
+    text-align: left;
+    height: 500px;
+    color: #fff;
+    background-color: black;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding: 40px;
+    margin-top: 0;
 }
