create the navbar section of page 2 of the website.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -74,6 +74,7 @@
     margin-top: 20px;
     margin-bottom: 50px;
     padding-top: 10px;
+    border-bottom: solid #FFAC12;
 }
 #items{
    display: flex;
