--- a/assets/quick.css
+++ b/assets/quick.css
@@ -33,7 +33,9 @@ nav > .thelinks > ul{
     margin-left: 50px;
     border-radius: 10px;
     padding-right: 80px;
-    padding-left: 80px;
+    padding-left: 40px;
+    margin-bottom: 300px;
+    margin-top: 100px;
 }
 .imagyra{
     margin: 100px;
@@ -60,7 +62,6 @@ nav > .thelinks > ul{
     border: solid gainsboro;
     border-radius: 10px;
     margin-bottom: 10px;
-   
 }
 .learn{
     color: #fff;
