Style the details section, adjusting its border, background color, border radius and margin-top.

--- a/assets/quick.css
+++ b/assets/quick.css
@@ -69,3 +69,12 @@ nav > .thelinks > ul{
     padding: 20px;
     border-top-right-radius: 10px;
 }
+.details{
+    border: solid gainsboro;
+    background-color: #fff;
+    border-radius: 20px;
+    margin-top: 40px;
+}
+table{
+    text-align: center;
+}
