Style the description section to give it backround-color, margin-top, border and border-radius.

--- a/assets/quick.css
+++ b/assets/quick.css
@@ -75,3 +75,9 @@ nav > .thelinks > ul{
     border-radius: 20px;
     margin-top: 40px;
 }
+.description{
+    border: solid gainsboro;
+    background-color: #fff;
+    border-radius: 20px;
+    margin-top: 20px;
+}
