Add logo, cause the navigation links to move on the far right and the logo to remain on the far left, putting a linear gradient below the navigation bar, style the navigation bar.

--- a/assets/quick.css
+++ b/assets/quick.css
@@ -1,6 +1,17 @@
 *{
     font-family: 'Poppins', sans-serif;
     list-style-type: none;
+}   
+.topnav{
+    background-color: black;
+    display: flex;
+    color: #fff;
+    justify-content: space-between;
+    padding: 30px;
+}
+li{
+    display: inline;
+    padding: 20px;
 }
 .down{
     display: flex;
