Add a section called main body section to the body of the page and under it add a div give it a class named section1, bellow this div add another div of class = images having two more subdivs one of class=bigimages and another one class = smallimages.

--- a/assets/quick.css
+++ b/assets/quick.css
@@ -13,6 +13,18 @@ li{
     display: inline;
     padding: 20px;
 }
+.Great{
+    font-size: x-large;
+    font-weight: 400;
+}
+.Movers{
+    font-size: x-large;
+    font-weight: 400;
+    color: #FFAC12;
+}
+#hr{
+    background-image: linear-gradient(#FFAC12);
+}
 .down{
     display: flex;
     justify-content: space-around;
