--- a/assets/quick.css
+++ b/assets/quick.css
@@ -37,6 +37,7 @@ li{
     border-radius: 20px;
     margin-bottom: 0px;
     padding: 35px;
+    margin-left: 30px;
 }
 .details{
     background-color: white;
@@ -52,6 +53,8 @@ li{
 table{
     border: gainsboro;
     border-collapse: collapse;
+    font-size: xx-large;
+    padding: 200px;
 }
 .profileicon{
     border: solid white;
@@ -111,6 +114,9 @@ table{
     border-collapse: collapse;
     margin: 10px;
     padding: 100;
+}
+.smallimages{
+    margin-top: 20px;
 }
 .footer{
     text-align: left;
